Fix overlapping and deprecated - Removed the negative margin on the search of the datatables as it could lead to overlapping issues, there is a little more whitespace now - Fixed an issue with a deprecated function in the module form

--- a/table/table.css
+++ b/table/table.css
@@ -58,7 +58,10 @@
 
 .socialwiki_wikicontent .dataTables_filter {
     text-align: right;
-    margin-top: -2.6em;
+}
+
+.socialwiki_wikicontent .dataTables_filter label {
+    margin: 0;
 }
 
 .socialwiki_wikicontent .dataTables_filter input {
